12.02.2020 Refactored some CSS and fixed some alignment issues

--- a/css/maincss.css
+++ b/css/maincss.css
@@ -4,31 +4,47 @@ body{
     padding: 0;
     background-color: rgb(209, 142, 59);
   }
-  
- /* Body wraper - Style is grid*/ 
-.Body_wapper  {
-  justify-content: center;
-  display: grid;
-  grid-template-columns: 700px 100px;
-  grid-gap: 0px;
-  overflow: hidden;
-}
 
-/* Header_Main*/
+  /* Header_Main*/
 #header_main {
+  font-family: 'Lucida Console', 'Arial Narrow', Arial, sans-serif;
   width: 100%;
+  padding: 8px;
   position: fixed;
   background-color: rgb(255, 128, 0);
-  padding: 5px;
- 
+}
+
+ /* Body wraper - Style is grid*/ 
+.Body_wapper  {
+  margin: auto;
+  overflow:hidden;
 }
 
 /* Navigation_top*/
+.nav_top {
+  font-family: 'Raleway', Arial, sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  top: 6px;
+  letter-spacing: 5px;
+  right: 30px;
+  position:fixed;
+}
 
+ul a:hover {
+  padding: 0;
+  color: #05FCE8;
+}
 
- /*Main sections*/ 
+li {
+  display: inline-block;
+  padding: 9px;
+}
+ /*Main sections*/
 .section_1,  .section_2, .section_3 {
-    margin-left: -600px;
+    z-index: -2;
+    position: relative;
+    margin: 50px;
     border-style: solid;
     border-width: .01px;
     border-radius: .9px;
@@ -37,13 +53,13 @@ body{
 
 .section_1 {
     margin-top: 65px;
-    padding: 2px;
+    padding: 5px;
     width: 300px;
 }
 
 .section_2{
   margin-top: 10px;
-    padding: 2px;
+    padding: 5px;
     width: 400px;
 }
 
